--- a/ci/pipeline/main.yml.erb
+++ b/ci/pipeline/main.yml.erb
@@ -22,13 +22,14 @@ jobs:
       - get: bosh-cpi-src
         trigger: true
         passed:
-        - lifecycle-5.5
-        - lifecycle-6.0
-        - lifecycle-6.0-NSXV
-        - lifecycle-6.5
-        - lifecycle-6.5-NSXV
-        - lifecycle-6.5-NSXT21
-        - lifecycle-6.7-NSXT22
+        - unit-test
+        #- lifecycle-5.5
+        #- lifecycle-6.0
+        #- lifecycle-6.0-NSXV
+        #- lifecycle-6.5
+        #- lifecycle-6.5-NSXV
+        #- lifecycle-6.5-NSXT21
+        #- lifecycle-6.7-NSXT22
       - get: version-semver
         trigger: false
         params: { bump: patch }
@@ -124,6 +125,83 @@ jobs:
       - put: pool-6.5
         params : {release: pool-6.5}
 
+
+  - name: lock-distribution-test
+    plan:
+      - aggregate:
+        - get: source-ci
+        - get: bosh-cpi-src
+          passed: [build-candidate]
+        - get: bosh-cpi-artifacts
+          trigger: true
+          passed: [build-candidate]
+      - do:
+        - put: environment
+          resource: pool-6.5
+          params: {acquire: true}
+        - task: extend-lease-6.5
+          file: source-ci/ci/tasks/extend-lease.yml
+          params:
+            DBCUSER: {{dbc_user}}
+            DBCHOST: {{dbc_host}}
+            DBC_SSH_KEY: {{dbc_key}}
+          on_failure:
+            put: pool-6.5
+            params : {release: environment}
+        attempts: 4
+
+  - name: distribution-test
+    serial: true
+    plan:
+      - aggregate:
+        - get: source-ci
+        - {get: cpi-release,              trigger: false, resource: bosh-cpi-artifacts, passed: [lock-distribution-test]}
+        - {get: environment,              trigger: true,  passed: [lock-distribution-test], resource: pool-6.5 }
+        - {get: bosh-release,             trigger: false, resource: old-bosh-release}
+        - {get: stemcell,                 trigger: false, resource: old-stemcell}
+        - {get: certification,            trigger: false}
+        - {get: bosh-deployment,          trigger: false}
+        - {get: bats,                     trigger: false}
+        - {get: bosh-cli,                 trigger: false}
+        - {get: bosh-cpi-src,             trigger: false, passed: [lock-distribution-test]}
+      - task: prepare-director
+        file: source-ci/ci/tasks/prepare-director.yml
+        params:
+          OPTIONAL_OPS_FILE:  |
+            -o certification/shared/assets/ops/redis.yml
+            -o certification/shared/assets/ops/remove-hm.yml
+            -o bosh-deployment/vsphere/resource-pool.yml
+            -o certification/shared/assets/ops/remove-provider-cert.yml
+      - do:
+        - task: deploy-director
+          file: source-ci/ci/tasks/deploy-director.yml
+        - task: run-distribution-test
+          file: source-ci/ci/tasks/run-distribution-test.yml
+        on_failure:
+          aggregate:
+          #- put: pool-6.5
+          #  params : {remove: environment}
+          - put: notify
+            params:
+              username: 'CPI-Doctor'
+              text: |
+                The distribution test failed. Check it out at: https://ci.vcna.io/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+        #ensure:
+        #  do:
+        #    - task: teardown
+        #      file: source-ci/ci/tasks/teardown.yml
+      - put: notify
+        params:
+          username: 'CPI-Doctor'
+          text: |
+            The distribution tests passed. Check it out at: https://ci.vcna.io/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+
+  - name: unlock-distribution-test
+    plan:
+      - {trigger: true, passed: [distribution-test], get: pool-6.5}
+      - put: pool-6.5
+        params : {release: pool-6.5}
+
   - name: delivery
     plan:
     - aggregate:
@@ -137,6 +215,7 @@ jobs:
         - lifecycle-6.5-NSXV
         - lifecycle-6.5-NSXT21
         - bats
+        - distribution-test
     - put: tracker-output
       params: { repos: [bosh-cpi-src] }
 
@@ -146,9 +225,9 @@ jobs:
     - aggregate:
       - get: source-ci
       - get: bosh-cpi-artifacts
-        passed: [bats]
+        passed: [distribution-test]
       - get: bosh-cpi-src
-        passed: [bats]
+        passed: [distribution-test]
       - get: release-version-semver
         params: { bump: major }
     - task: inspect
@@ -350,6 +429,9 @@ groups:
   - lifecycle-5.5
   - lock-5.5
   - unlock-5.5
+  - lock-distribution-test
+  - distribution-test
+  - unlock-distribution-test
 
 
 - name: Delivery
@@ -370,7 +452,6 @@ groups:
   - bats
   - lock-bats
   - unlock-bats
-
 
 - name: v6.5
   jobs:
